Rename interfaces for list chats API
